# pretty-table-rs

./: Cargo.toml  README.md
examples/: printing_table.rs
src/: error.rs  lib.rs  prelude.rs  table.rs
